feat(backend): implement retrocompatible S3 thumbnail pipeline
